# project1

./: DS_Store  LICENSE  README.md  embed_chunks.py  embeddings.py  image.txt  main.py  pyproject.toml  render.yaml  requirements.txt  scraping.ipynb  vercelignore.txt
.ipynb_checkpoints/: scraping-checkpoint.ipynb  tds_chunked_metadata-checkpoint.json  tds_course_content-checkpoint.json  tds_discourse_posts-checkpoint.json  tds_discourse_posts_processed-checkpoint.json  tds_topics-checkpoint.json
api/: main.py
data/: discourse_chunks.json  discourse_faiss.index  tds_chunks.json  tds_course_content,json  tds_discourse.json  tds_faiss.index
scraper/: embed_chunks.py  embed_discourse.py  scrape_discourse.py  scraqpe_tds.py
